Fix : 선택한 음식의 isFavorite 값 관찰

--- a/app/src/main/res/layout/fragment_food_detail.xml
+++ b/app/src/main/res/layout/fragment_food_detail.xml
@@ -86,17 +86,16 @@
 
                     <ImageButton
                         android:id="@+id/favoriteBtn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginEnd="20dp"
                         android:background="@android:color/transparent"
                         android:contentDescription="@string/favorite"
-                        android:src="@drawable/ic_star_border"
-                        app:srcCompat="@{viewModel.isFavorite}"
                         android:visibility="visible"
                         app:layout_constraintBottom_toBottomOf="@+id/foodName"
-                        app:layout_constraintStart_toEndOf="@+id/foodName"
-                        app:layout_constraintTop_toTopOf="@+id/foodName" />
+                        app:layout_constraintEnd_toStartOf="@+id/foodName"
+                        app:layout_constraintTop_toTopOf="@+id/foodName"
+                        app:srcCompat="@{viewModel.isFavorite}" />
 
 
                     <View
